gcc-9 (9-20190202-2) UNRELEASED; urgency=medium

  * Update the support to build without packages being built by the next GCC
    version.

 -- Matthias Klose <doko@debian.org>  Tue, 05 Feb 2019 22:06:04 +0100

gcc-9 (9-20190202-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20190202, r268474).

 -- Matthias Klose <doko@debian.org>  Sat, 02 Feb 2019 12:19:53 +0100

gcc-9 (9-20190125-2) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20190125, r268260).

  [ Matthias Klose ]
  * Turn on ld --as-needed by default on Debian development versions.
  * Turn on profiled bootstrap on x86, AArch64, PPC64 and s390x
    architectures for native builds.
  * Relax the shlibs dependency for libgnat-8. Addresses: #920246.

  [ Nicolas Boulenguez ]
  * Update the ada-kfreebsd patch. Closes: #919996.

 -- Matthias Klose <doko@debian.org>  Fri, 25 Jan 2019 11:58:44 +0100

gcc-9 (9-20190120-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20190120, r268102).
    - Updates to Go 1.12 beta2.
  * Build libphobos on hppa.
  * Drop libgo patch for the Hurd.
  * Refresh patches.
  * Update newlib to newlib-3.1.0.20181231.

 -- Matthias Klose <doko@debian.org>  Sun, 20 Jan 2019 11:28:26 +0100

gcc-9 (9-20190116-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20190116, r267965).
  * libgccjit-9-doc: Breaks libgccjit-8-doc. Closes: #918445.
  * Update libstdc++6 symbols files.
  * Override some libasan and gccgo lintian warnings.
  * Build the Ada packages except for gnat-9-sjlj.
  * Bump standards version.

 -- Matthias Klose <doko@debian.org>  Wed, 16 Jan 2019 09:42:19 +0100

gcc-9 (9-20190103-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20190103).

  [ Matthias Klose ]
  * Update packaging, patches and symbols files.
  * Remove libmpx packaging, removed upstream.
  * Update newlib to the newlib-3.0.0.20180831 snapshot.
  * Disable building Ada for now.