@@ -2,6 +2,7 @@ gcc-9 (9-20190202-2) UNRELEASED; urgency=medium
 
   * Update the support to build without packages being built by the next GCC
     version.
+  * Fix ISO_Fortran_binding.h installation for cross builds.
 
  -- Matthias Klose <doko@debian.org>  Tue, 05 Feb 2019 22:06:04 +0100
 
